--- a/ScrollosUI/src/index.css
+++ b/ScrollosUI/src/index.css
@@ -308,7 +308,7 @@ button:hover {
       background-color: white;
       cursor: pointer;
       margin-left: auto;
-  
+
       /* border- */
       width: 3em;
     }
@@ -667,7 +667,7 @@ button:hover {
       display: flex;
       justify-content: center;
       width: 100%;
-background-color: var(--right-column);
+      background-color: var(--right-column);
       .right-column-loading {
         animation: rotate 2s ease-in-out infinite;
         opacity: 50%;
@@ -725,11 +725,13 @@ background-color: var(--right-column);
     justify-content: space-between;
     align-items: center;
     margin-left: 40px;
-    div {
+    /* div {
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-    }
+    } */
+
+
     .row-title {
       flex: 1.2;
       max-width: 200px;
@@ -785,10 +787,10 @@ background-color: var(--right-column);
     .row-discussions {
       flex: 1;
       display: flex;
-      .row-flex{
+      .row-flex {
         display: flex;
-        gap:6px;
-        .views-icon{
+        gap: 6px;
+        .views-icon {
           width: 16px;
         }
       }
@@ -796,7 +798,6 @@ background-color: var(--right-column);
         gap: 6px;
         display: flex;
         cursor: pointer;
-       
       }
     }
     .row-rating {
@@ -946,7 +947,7 @@ background-color: var(--right-column);
     display: flex;
     max-height: 250px;
     min-height: 250px;
-  
+
     .title {
       /* min-width:4.6em; */
       /* min-width: 100%; */
@@ -2909,6 +2910,7 @@ background-color: var(--right-column);
   align-items: center;
   z-index: 10;
   cursor: pointer;
+
   .popup-content-container {
     width: 80%;
     height: 90%;
@@ -3371,7 +3373,7 @@ background-color: var(--right-column);
   }
 
   .discussions-overflow {
-    overflow-y: auto;
+    overflow-y: scroll;
     display: flex;
     height: 100%;
     scrollbar-color: var(--scrollbar-color) var(--scrollbar-background);
@@ -3588,15 +3590,15 @@ background-color: var(--right-column);
 }
 
 /* error page component */
-.error-page{
+.error-page {
   display: flex;
   flex-direction: column;
-  justify-content:  center;
-  color:black;
+  justify-content: center;
+  color: black;
   align-items: center;
   height: 100%;
-  gap:30px;
-  h1{
+  gap: 30px;
+  h1 {
     font-size: 30px;
   }
 }
